# allseer-rs

./: Cargo.toml  flake.nix
src/: handle_interaction.rs  main.rs
src/commands/: comments.rs  fetch.rs  mod.rs  ping.rs  pr.rs  search.rs
src/utils/: diagnostics.rs  handler.rs  mod.rs  search_type.rs
